<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/userProfilePic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/user_profile_picture"
        app:layout_constraintBottom_toTopOf="@id/userInfo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/userInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userProfilePic">

        <LinearLayout
            android:id="@+id/userNameLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/userNameField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/userNameAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="John Marston" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/reputationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reputationField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reputation" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/reputationAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                tools:text="123" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:background="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/badgesLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/badgesField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/badges" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/badgesAnswerLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/badgesBronze"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/badges"
                tools:text="1 Bronze" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/badgesSilver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="0 Silver" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/badgesGold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="2 Gold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:background="@color/colorAccent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/locationLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/locationField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/locationAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Tahiti" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ageLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ageField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/ageAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="33" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/creationDateLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/creationDateField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/creation_date" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/creationDateAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewEnd"
                tools:text="01/01/2000" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>